# trackstar

./: .gitignore  .gitmodules  README.md  requirements.txt  resize.sh  run_full.sh  run_live.sh  write_video.py
cv_test_scripts/: CMakeLists.txt  conf_v1.json  conf_v2.json  data_collection_track.py  downsizeVideo.py  infraction_detection.ipynb  infraction_detection.py  laneMotionDetection.py  laneMotionDetection2.py  lane_detection.cpp  model_training.ipynb  mog2_motion.py  motion_detection_v1.cpp  motion_detection_v2.cpp
deployment/: deploy_drones.py  estimate_pose.py  pipeline_params.py  test_deployment.py
gui/: app.py
gui/templates/: indexLocalFetching.html
pipeline/: full_pipeline.py  horizontalLaneDetection.py  live_pipeline.py
